<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="*">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <Space
                android:layout_height="30dp"
                android:layout_span="2" />

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:minHeight="50dp">

            <FrameLayout
                android:id="@+id/frameLayout1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/button3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#3F51B5"
                    android:onClick="onSyncBtn"
                    android:text="@string/refresh_status"
                    android:visibility="visible"
                    tools:visibility="visible" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="gone"
                    tools:visibility="gone" />

            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/last_sync" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/textview" />
            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="2"
                android:orientation="vertical">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="10dp" />

                <View
                    android:id="@+id/divider2"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:background="?android:attr/listDivider" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="15dp" />
            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center|center_horizontal"
            android:gravity="center"
            android:textAlignment="center">

            <RadioGroup
                android:id="@+id/radioControl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioArmed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:paddingHorizontal="25px"
                    android:text="Armed" />

                <RadioButton
                    android:id="@+id/radioOff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:enabled="false"
                    android:paddingHorizontal="25px"
                    android:text="Off" />

                <RadioButton
                    android:id="@+id/radioLog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:paddingHorizontal="25px"
                    android:text="Monitor" />
            </RadioGroup>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#3F51B5"
            android:minHeight="30dp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif"
                android:text="@string/sensorHeaderLabel"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/sensorHeaderStatus"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold|italic" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/checkBox1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/prox_1"
                android:enabled="false"
                android:text="@string/prox_1_des" />

            <TextView
                android:id="@+id/prox1StatusText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/statusTextND" />

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/prox_2"
                android:enabled="false"
                android:text="@string/prox_2_des" />

            <TextView
                android:id="@+id/prox2StatusText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/statusTextND" />

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/checkBox3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/prox_3"
                android:enabled="false"
                android:text="@string/prox_3_des" />

            <TextView
                android:id="@+id/prox3StatusText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/statusTextND" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/checkBox4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/prox_4"
                android:enabled="false"
                android:text="@string/prox_4_des" />

            <TextView
                android:id="@+id/prox4StatusText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/statusTextND" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/checkBox5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/prox_5"
                android:enabled="false"
                android:text="@string/prox_5_des" />

            <TextView
                android:id="@+id/prox5StatusText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/statusTextND" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/checkBox6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/pir_1"
                android:enabled="false"
                android:text="@string/pir_1_des" />

            <TextView
                android:id="@+id/pir1StatusText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/statusTextND" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/checkBox7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/pir_2"
                android:enabled="false"
                android:text="@string/pir_2_des" />

            <TextView
                android:id="@+id/pir2StatusText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/statusTextND" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/checkBox8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/pir_3"
                android:enabled="false"
                android:text="@string/pir_3_des" />

            <TextView
                android:id="@+id/pir3StatusText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/statusTextND" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lastUpdLabel" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/lastUpdateVal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lastAlarmLabel" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/lastAlarmVal" />
            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:gravity="center_horizontal"
                android:onClick="onUpdateBtn"
                android:text="@string/submit" />

        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>